src/app/globals.css
@import "tailwindcss";

:root {
  --background: #fff;
  --header: #C7ECF7;
  --header-scrolled: #78d2eb69;
  --shadow: #00000090;
  --text: #000;
  --second: #2A387F;
  --img-filter: brightness(100%) invert(0%);
  --purpel-text: #D202C8
}

.dark {
  --background: #6d6d6d;
  --text: #fff;
  --header: #1C3066;
  --header-scrolled: #3f6be572;
  --shadow: #b1b1b16a;
  --second: #1b2866;
  --img-filter: brightness(100%) invert(100%);
  --purpel-text: #D202C8
}



@layer utilities {
  .dark-img {
    filter: var(--img-filter);
    cursor: pointer;
  }
  @media (min-width: 768px) {
    .clip-path-triangle-1 {
      clip-path: polygon(70% 0, 700% 170%, 0% 80%);
      border: #000 solid 2px;
    }
  }
  @media (max-width: 768px) {
  .clip-path-triangle-1 {
    object-fit: cover;
    margin: 0;
    height: 30vh;
    position: absolute;
    border: #000 solid 2px;
  }
  .georgia {
    font-family: Georgia, serif;
  }
}
}




/* Global styles */

body {
  transition: 200ms linear 50s;
}

